--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,12 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
+  name             : "Victor Crespo"
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "Duke University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "v.crespo@duke.edu" 
 
   # Academic websites
   academia         : # URL
