--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "foto_web.jpeg"
+  avatar           : "foto web.jpeg"
   name             : "Victor Crespo"
   bio              : "Philosophy PhD candidate"
   location         : "Durham, NC"
