--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,10 @@ title                    : "Victor Crespo"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://v-crespo.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "/philosophy" # the subpath of your site, e.g. "/blog"
+url                      : "https://v-crespo.github.io"
+baseurl                  : "/philosophy"
 repository               : "v-crespo/philosophy"
+
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
