--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
+title                    : "Victor Crespo"
+title_separator          : "-"
+name                     : &name "Your Name"
 description              : &description "personal description"
 url                      : "https://v-crespo.github.io"
 baseurl                  : "/philosophy"
